# OBSIDIAN-8

./: .gitignore  Configuration_Management_Plan.txt  Cybersecurity_Threat_Model.txt  Environmental_Qualification_Plan.txt  Failure_Modes_and_Effects_Analysis.txt  Human_Machine_Interface_Spec.txt  Maintenance_Procedure_Manual.txt  OBSIDIAN-8_MASTER_BOM_LARGE_FORMAT_REV_A.txt  Operational_Test_Plan.txt  Power_Budget_Analysis.txt  README.md  Risk_Register.txt  Safety_Architecture.txt  Software_Node_Architecture.txt  System_Block_Diagram.txt  System_Requirements_Specification.txt  Verification_Traceability_Matrix.txt
00_System_Definition/: Operational_Envelope.txt
01_Mechanical/: Geometry_Model.txt  Torque_and_Stability_Model.txt
02_Electrical/: Power_Tree_Architecture.txt
03_Control_Architecture/: Distributed_Compute_Model.txt  Fault_Containment_Model.txt
04_Autonomy/: Autonomous_Charging_Logic.txt  Gait_Engine_Model.txt  Mission_Governance_Model.txt  Reactive_Core_Model.txt  Spatial_Intelligence_Model.txt
05_Perception/: Head_Module_Architecture.txt  OpenCV_Pipeline.txt
06_Navigation/: GPS_Outdoor_Fusion_Model.txt
07_Swarm_and_Network/: Swarm_Coordination_Framework.txt
08_Software/: Package_Structure.txt  ROS2_Node_Graph.txt
10_Lifecycle/: Phase_1_Prototype_Validation.txt  Phase_3_Scaled_Production.txt  Phase_4_Field_Operations.txt  Phase_5_Upgrade_and_Modernization.txt  Phase_6_Decommissioning.txt
CAD/: V3_CAD_BUILD_SEQUENCE.txt  V3_FASTENER_SPEC_v1.txt  (+17 more)
src/obsidian_core/: CMakeLists.txt  package.xml
src/obsidian_core/src/: reactive_core.cpp
(+7 files in other folders)
